--- a/web/index.html
+++ b/web/index.html
@@ -9,7 +9,9 @@
 </head>
 </head>
 <body>
-  <header class="topo">
+
+  <!-- CABEÇALHO DA PÁGINA -->
+  <header id="topo" class="topo">
     <div class="container">
       <a class="logo" href="index.html">
         <img src="IMG/logo natural terra.png" class="logo">
@@ -22,7 +24,7 @@
       <nav class="menu">
         <ul>
           <li><a href="index.html">Início</a></li>
-          <li><a href="#">Produtos</a></li>
+          <li><a href="#produtos">Produtos</a></li>
           <li><a href="#sobre">Sobre</a></li>
           <li><a href="#contato">Contato</a></li>
         </ul>
@@ -30,7 +32,8 @@
     </div>
   </header>
   
-<div id="carouselExampleIndicators" class="carousel slide">
+  <!-- CARROSSEL DE PRODUTOS -->
+<div id="carouselExampleIndicators" class="carousel slide" class="carousel">
   <div class="carousel-indicators">
     <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
     <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
@@ -57,12 +60,12 @@
   </button>
 </div>
 
-     <!--Sobre-->
+     <!-- SEÇÃO SOBRE -->
   <section id="sobre" class="sobre">
     <div class="container-sobre">
       <img src="IMG/fechada natural terra.jpg" alt="Fachada Mapra">
       
-      <div class="texto-sobre">
+      <div class="texto-sobre" id="sobre">
         <h2>Sobre a Natural Terra</h2>
         <br>
         <p>Na Natural Terra, acreditamos que saúde e bem-estar começam com escolhas conscientes. Somos apaixonados pela vida natural, pela harmonia com o meio ambiente e por tudo que promove equilíbrio e qualidade de vida.</p>
@@ -70,11 +73,11 @@
         <p>Mais do que uma loja, somos um estilo de vida. Acreditamos no poder das pequenas mudanças e na força da natureza para renovar corpo, mente e espírito. Sinta-se em casa. Aqui é o seu lugar para viver com mais saúde, mais consciência e mais conexão com o que realmente importa.</p>
         <br>
         <!-- LOCALIZAÇÃO -->
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3729.40306052985!2d-49.512142423960256!3d-20.81542436649199!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94bdaf15be98d5b3%3A0xbbaff31bf576217e!2sNatural%20Terra!5e0!3m2!1spt-BR!2sbr!4v1748637931592!5m2!1spt-BR!2sbr"
-                width="730"
-                height="265"
+          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3729.40306052985!2d-49.512142423960256!3d-20.81542436649199!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94bdaf15be98d5b3%3A0xbbaff31bf576217e!2sNatural%20Terra!5e0!3m2!1spt-BR!2sbr!4v1748637931592!5m2!1spt-BR!2sbr"
+                width="100%"
+                height="100%"
                 style="border:0;"
-                allowfullscreen=""
+                allowfullscreen="yes"
                 loading="lazy"
                 referrerpolicy="no-referrer-when-downgrade"></iframe>
       </div>
@@ -139,7 +142,7 @@
         <span><a href="https://wa.me/5517992116036" class="btn btn-success m-2" target="_blank" rel="external">WhatsApp</a></span>
         <span><a href="https://www.instagram.com/naturalterra1" class="btn btn-outline-dark m-2" target="_blank" rel="external">Instagram</a></span>
       </div>
-    </section>
+    </section>
 
 
   <!-- Rodapé -->
