--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       <img src="IMG/CARROSSEL PSYLLIUM.png" class="d-block w-100" alt="...">
     </div>
     <div class="carousel-item">
-      <img src="IMG/CARROSSEL SPIRULINA.png" class="d-block w-100" alt="...">
+      <img src="IMG/CARROSSEL PSYLLIUM.png" class="d-block w-100" alt="...">
     </div>
   </div>
   <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
