--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
     <div class="row g-4">
       <div class="col-md-3">
         <div class="card h-100">
-          <img src="img/vinagre.jpg" class="card-img-top" alt="Vinagre de Maçã">
+          <img src="IMG/vinagre.jpg" class="card-img-top" alt="Vinagre de Maçã">
           <div class="card-body">
             <h5 class="card-title">Vinagre de Maçã Orgânico 500ml</h5>
             <p class="card-text">Código: 7898912678072<br>Preço: R$ 33,95</p>
@@ -101,7 +101,7 @@
       </div>
       <div class="col-md-3">
         <div class="card h-100">
-          <img src="img/vitamina-d3.jpg" class="card-img-top" alt="Vitamina D3">
+          <img src="IMG/vitamina-d3.jpg" class="card-img-top" alt="Vitamina D3">
           <div class="card-body">
             <h5 class="card-title">Vitamina D3 2000UI - 60 cápsulas</h5>
             <p class="card-text">Código: 7896108020124<br>Preço: R$ 29,90</p>
@@ -111,7 +111,7 @@
       </div>
       <div class="col-md-3">
         <div class="card h-100">
-          <img src="img/omega3.jpg" class="card-img-top" alt="Ômega 3 Catarinense">
+          <img src="IMG/omega3.jpg" class="card-img-top" alt="Ômega 3 Catarinense">
           <div class="card-body">
             <h5 class="card-title">Ômega 3 Catarinense 1000mg - 120 cápsulas</h5>
             <p class="card-text">Código: 7896023794018<br>Preço: R$ 76,90</p>
@@ -121,7 +121,7 @@
       </div>
       <div class="col-md-3">
         <div class="card h-100">
-          <img src="img/nutripropolis.jpg" class="card-img-top" alt="Nutriprópolis">
+          <img src="IMG/nutripropolis.jpg" class="card-img-top" alt="Nutriprópolis">
           <div class="card-body">
             <h5 class="card-title">Nutriprópolis - Spray 30ml</h5>
             <p class="card-text">Código: 7897835702222<br>Preço: R$ 24,90</p>
