--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
 </head>
-</head>
 <body>
 
   <!-- CABEÇALHO DA PÁGINA -->
@@ -16,7 +15,7 @@
       <a class="logo" href="index.html">
         <img src="IMG/logo natural terra.png" class="logo">
       </a>
-      
+        
       <button class="menu-toggle" aria-label="Abrir menu">
         <span class="hamburguer"></span>
       </button>
@@ -47,7 +46,7 @@
       <img src="IMG/CARROSSEL PSYLLIUM.png" class="d-block w-100" alt="...">
     </div>
     <div class="carousel-item">
-      <img src="IMG/CARROSSEL PSYLLIUM.png" class="d-block w-100" alt="...">
+      <img src="IMG/CARROSSEL SPIRULINA.png" class="d-block w-100" alt="...">
     </div>
   </div>
   <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
