--- a/index.html
+++ b/index.html
@@ -3,23 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Natural Terra</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="style.css">
+    <title>| Natural Terra</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
+    <link rel="apple-touch-icon" sizes="180x180" href="favicon_io/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon_io/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon_io/favicon-16x16.png">
+    <link rel="manifest" href="favicon_io/site.webmanifest">
 </head>
 <body>
 
   <!-- CABEÇALHO DA PÁGINA -->
   <header id="topo" class="topo">
     <div class="container">
-      <a class="logo" href="index.html">
-        <img src="IMG/logo natural terra.png" class="logo">
+      <a class="logo-link" href="index.html">
+        <img src="IMG/logo natural terra.png" class="logo-img">
       </a>
         
-      <button class="menu-toggle" aria-label="Abrir menu">
-        <span class="hamburguer"></span>
-      </button>
-  
       <nav class="menu">
         <ul>
           <li><a href="index.html">Início</a></li>
@@ -73,18 +73,18 @@
         <br>
         <!-- LOCALIZAÇÃO -->
           <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3729.40306052985!2d-49.512142423960256!3d-20.81542436649199!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94bdaf15be98d5b3%3A0xbbaff31bf576217e!2sNatural%20Terra!5e0!3m2!1spt-BR!2sbr!4v1748637931592!5m2!1spt-BR!2sbr"
-                width="100%"
-                height="100%"
-                style="border:0;"
-                allowfullscreen="yes"
-                loading="lazy"
-                referrerpolicy="no-referrer-when-downgrade"></iframe>
+            width="100%"
+            style="border:0; height: 369px;"
+            allowfullscreen="yes"
+            loading="lazy"
+            referrerpolicy="no-referrer-when-downgrade">
+          </iframe>
       </div>
     </div>
   </section>
   
 <!-- Produtos -->
-<section id="produtos" class="py-5 bg-light">
+<section id="produtos" class="produtos">
   <div class="container text-center">
     <h2 class="mb-4">Nossos Produtos</h2>
     <div class="row g-4">
