--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
           <div class="card-body">
             <h5 class="card-title">Vinagre de Maçã Orgânico 500ml</h5>
             <p class="card-text">Código: 7898912678072<br>Preço: R$ 33,95</p>
-            <a href="#" class="btn btn-success">Comprar</a>
+            <a href="https://wa.me/5517992116036" class="btn btn-success">Comprar</a>
           </div>
         </div>
       </div>
@@ -109,7 +109,7 @@
           <div class="card-body">
             <h5 class="card-title">Vitamina D3 2000UI - 60 cápsulas</h5>
             <p class="card-text">Código: 7896108020124<br>Preço: R$ 29,90</p>
-            <a href="#" class="btn btn-success">Comprar</a>
+            <a href="https://wa.me/5517992116036" class="btn btn-success">Comprar</a>
           </div>
         </div>
       </div>
@@ -119,7 +119,7 @@
           <div class="card-body">
             <h5 class="card-title">Ômega 3 Catarinense 1000mg - 120 cápsulas</h5>
             <p class="card-text">Código: 7896023794018<br>Preço: R$ 76,90</p>
-            <a href="#" class="btn btn-success">Comprar</a>
+            <a href="https://wa.me/5517992116036" class="btn btn-success">Comprar</a>
           </div>
         </div>
       </div>
@@ -129,7 +129,7 @@
           <div class="card-body">
             <h5 class="card-title">Nutriprópolis - Spray 30ml</h5>
             <p class="card-text">Código: 7897835702222<br>Preço: R$ 24,90</p>
-            <a href="#" class="btn btn-success">Comprar</a>
+            <a href="https://wa.me/5517992116036" class="btn btn-success">Comprar</a>
           </div>
         </div>
       </div>
