--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
   
 
   <script>
-    const btnToggle = document.querySelector('.#hamburguer');
+    const btnToggle = document.querySelector('#hamburguer');
     const menu = document.querySelector('.menu');
   
     btnToggle.addEventListener('click', () => {
