--- a/index.html
+++ b/index.html
@@ -14,18 +14,19 @@
 <body>
   <!-- CABEÇALHO DA PÁGINA -->
   <header id="topo" class="topo">
-    <div class="container">
-      <a class="logo-link" href="index.html">
-        <img src="IMG/logo natural terra.png" class="logo-img">
-      </a>
-        
+  <div class="container">
+    <a class="logo-link" href="index.html">
+      <img src="IMG/logo natural terra.png" class="logo-img">
+    </a>
+
+    <div class="topo-direita">
       <div class="hamburguer" id="hamburguer">
         <span></span>
         <span></span>
         <span></span>
       </div>
 
-      <nav class="menu">
+      <nav class="menu" id="menu">
         <ul>
           <li><a href="index.html">Início</a></li>
           <li><a href="#produtos">Produtos</a></li>
@@ -34,7 +35,9 @@
         </ul>
       </nav>
     </div>
-  </header>
+  </div>
+</header>
+
   
   <!-- CARROSSEL DE PRODUTOS -->
 <div id="carouselExampleIndicators" class="carousel slide" class="carousel">
@@ -88,7 +91,7 @@
     </div>
   </section>
   
-<!-- Produtos -->
+<!-- PRODUTOS -->
 <section id="produtos" class="produtos">
   <div class="container text-center">
     <h2 class="mb-4">Nossos Produtos</h2>
@@ -138,7 +141,7 @@
 </section>
 
 
-  <!-- Contato -->
+  <!-- CONTATO -->
     <section id="contato" class="py-5 bg-light text-center">
       <div class="container">
         <h2>Fale Conosco</h2>
@@ -149,24 +152,22 @@
     </section>
 
 
-  <!-- Rodapé -->
+  <!-- RODAPÉ -->
     <footer class="bg-dark text-white text-center py-3">
       <small>© 2025 Natural Terra. Todos os direitos reservados.</small>
     </footer>
-  
 
-  <script>
-    const btnToggle = document.querySelector('#hamburguer');
-    const menu = document.querySelector('.menu');
-  
-    btnToggle.addEventListener('click', () => {
-      menu.classList.toggle('menu-aberto');
-      btnToggle.classList.toggle('ativo');
-    });
-  </script>
-
+  <!-- JS -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+  <script>
+  const btn = document.getElementById("hamburguer");
+  const menu = document.getElementById("menu");
 
+  btn.addEventListener("click", () => {
+    menu.classList.toggle("menu-aberto");
+    btn.classList.toggle("ativo");
+  });
+</script>
   
 </body>
 </html>
